trying to have branches merge

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="container">
           <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-6 text-center">
-              <h2>Welcome to UpConstruction</h2>
+              <h1><img src="assets/ern_logo/1Av2/EvictionStudy_logo_v09_1A_LOGO_BANNER_REV.png" alt="The Eviction Research Network logo" style="width: 300px;"></h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               <a href="#get-started" class="btn-get-started">Get Started</a>
             </div>
