--- a/projects.html
+++ b/projects.html
@@ -104,10 +104,10 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-remodeling">Remodeling</li>
-            <li data-filter=".filter-construction">Construction</li>
-            <li data-filter=".filter-repairs">Repairs</li>
-            <li data-filter=".filter-design">Design</li>
+            <li data-filter=".filter-remodeling">State Eviction Maps & Profiles</li>
+            <li data-filter=".filter-construction">Earlier Work</li>
+            <li data-filter=".filter-repairs">Reports</li>
+            <!-- <li data-filter=".filter-design">Design</li> -->
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
