--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <!-- <h1 class="sitename"> Eviction Research Network</h1> <span>.</span> -->
-        <h1><img src="assetsx/ern_logo/1Av2/EvictionStudy_logo_v09_1A_LOGO_BANNER.png" alt="The Eviction Research Network logo" style="width: 200px;"></h1>
+        <h1><img src="images/ern_logo/1Av2/EvictionStudy_logo_v09_1A_LOGO_BANNER.png" alt="The Eviction Research Network logo;"></h1>
+        <!-- style="width: 200px; background-color:rgba(255, 255, 255, 0.8); border-radius: 10px -->
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -102,24 +103,20 @@
 
       <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
 
-        <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-1.jpg" alt="">
-        </div>
-
         <div class="carousel-item active">
-          <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
+          <img src="images/mlkbig.jpg" alt="">
         </div>
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
+          <img src="images/mapbig.jpg" alt="">
         </div>
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-4.jpg" alt="">
+          <img src="images/GovSigningbig.jpg" alt="">
         </div>
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-5.jpg" alt="">
+          <img src="images/seattlebig.jpg" alt="">
         </div>
 
         <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
@@ -140,12 +137,15 @@
 
         <div class="row justify-content-between gy-4">
 
-          <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
+          <div class="col-lg-6 d-flex align-items-center">
             <div class="content">
               <h3>RESEARCH FOR SOCIAL GOOD</h3>
               <p>We create things that can't be unseen. The Eviction Research Network collects, analyzes, & maps eviction data while helping other researchers map & analyze theirs. We specialize in using social & data science to analyze racial & gender disparities in eviction & urban theory to help explain our findings.</p> 
               <P>Our goal is to expand public & scholarly knowledge on the prevalence & drivers of evictions in under-studied regions, highlight work from scholars in the field, & provide evidence-based research that legislatures, practitioners, & advocates can use to inform policy.</p>
             </div>
+          </div>
+          <div class="col-lg-6 d-flex align-items-center">
+            <img src="images/bannersmall.jpg" alt="" style="width: 600px">
           </div>
 <!-- 
           <div class="col-lg-5" data-aos="zoom-out" data-aos-delay="200">
