--- a/wa.html
+++ b/wa.html
@@ -83,13 +83,14 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);">
+    <!-- <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);"> -->
+    <div class="page-title dark-background" style="background-image: url(assets/img/seattle_air.png);">
       <div class="container position-relative">
         <h1>Washington State</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">About</li>
+            <!-- <li><a href="index.html">Home</a></li> -->
+            <li class="current">Tim Thomas & Mia Schwinghammer</li>
           </ol>
         </nav>
       </div>
