--- a/wa.html
+++ b/wa.html
@@ -84,7 +84,8 @@
 
     <!-- Page Title -->
     <!-- <div class="page-title dark-background" style="background-image: url(assets/img/page-title-bg.jpg);"> -->
-    <div class="page-title dark-background" style="background-image: url(assets/img/seattle_air.png);">
+    <!-- <div class="page-title dark-background" style="background-image: url(assets/img/seattle_air.png);"> -->
+    <div class="page-title dark-background" style="background-image: url(assets/img/JNGQE9951.png);">
       <div class="container position-relative">
         <h1>Washington State</h1>
         <nav class="breadcrumbs">
