--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <img src="images/mlkbig.jpg" alt="">
+          <img src="images/street_mural.jpg" alt="">
         </div>
 
         <div class="carousel-item">
@@ -464,32 +464,33 @@
         <!-- <div class="row justify-content-between gy-4"> <div class="col-lg-6 d-flex align-items-center -->
           
         <ul class="nav nav-tabs row  g-2 d-flex" data-aos="fade-up" data-aos-delay="100" role="tablist">
+
           <li class="nav-item col-2" role="presentation">
-            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-4" aria-selected="false" tabindex="-1" role="tab">
+            <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#features-tab-1" aria-selected="true" role="tab">
               <h4>Data Providers</h4>
             </a>
           </li><!-- End tab nav item -->
 
           <li class="nav-item col-2" role="presentation">
-            <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#features-tab-1" aria-selected="true" role="tab">
-              <h4>Geocoding</h4>
-            </a>
-          </li><!-- End tab nav item -->
-
-          <li class="nav-item col-3" role="presentation">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-2" aria-selected="false" tabindex="-1" role="tab">
-              <h4>Defendant Name Cleaning</h4>
+              <h4>Geocoding</h4>
             </a><!-- End tab nav item -->
 
           </li>
           <li class="nav-item col-3" role="presentation">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-3" aria-selected="false" tabindex="-1" role="tab">
+              <h4>Defendant Name Cleaning</h4>
+            </a>
+          </li><!-- End tab nav item -->
+
+          <li class="nav-item col-3" role="presentation">
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-4" aria-selected="false" tabindex="-1" role="tab">
               <h4>Demographic Estimation</h4>
             </a>
           </li><!-- End tab nav item -->
 
           <li class="nav-item col-2" role="presentation">
-            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-4" aria-selected="false" tabindex="-1" role="tab">
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-5" aria-selected="false" tabindex="-1" role="tab">
               <h4>Deduplication</h4>
             </a>
           </li><!-- End tab nav item -->
@@ -501,14 +502,16 @@
           <div class="tab-pane fade active show" id="features-tab-1" role="tabpanel">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-                <h3>Geocoding and Geographic "Redistribution"</h3>
-                <p class="fst-italic">
+                <h3>Data Providers</h3>
+                <!-- <p class="fst-italic"> 
                   description here on geocoding and geographic redistribution
-                </p>
+                </p> -->
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>step 1</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>step 2</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>step 3</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Legal Services Corporation</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Portland State University</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Chicago Legal Aid / ACLU</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Baltimore City Sheriff's Department</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Washington State unlawful detainer data</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -520,19 +523,17 @@
           <div class="tab-pane fade" id="features-tab-2" role="tabpanel">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-                <h3>Defendant Name Cleaning</h3>
+                <h3>Geocoding & Geographic "Redistribution"</h3>
                 <p class="fst-italic">
-                  description here on defendant name cleaning
+                  Geocoding is the process of creating spatial data by establishing the latitude and longitude of individual addresses. 
                 </p>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span></span></li>
-                  <li><i class="bi bi-check2-all"></i> <span></span></li>
-                  <li><i class="bi bi-check2-all"></i> <span></span></li>
-                  <li><i class="bi bi-check2-all"></i> <span></span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>The quality and specificity of the address field provided in the original data varied</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>For each county within a state, we determined the geographic scale (census tract, zip code, or county) at which the plurality of eviction cases were available</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
-                <img src="assets/img/features-2.jpg" alt="" class="img-fluid">
+                <img src="images/mapbig.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div><!-- End tab content item -->
@@ -540,24 +541,44 @@
           <div class="tab-pane fade" id="features-tab-3" role="tabpanel">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-                <h3>Demographic Estimation</h3>
+                <h3>Defendant Name Cleaning</h3>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>We used string manipulation methods to clean and extract the first and last names of individual defendants</span></li>
                 </ul>
                 <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
+                  For these state profiles, we are only interested in analyzing evictions of individual households, not commercial evictions.
                 </p>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
-                <img src="assets/img/features-3.jpg" alt="" class="img-fluid">
+                <img src="images/row_houses.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div><!-- End tab content item -->
 
           <div class="tab-pane fade" id="features-tab-4" role="tabpanel">
+            <div class="row">
+              <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <h3>Demographic Estimation</h3>
+                <p class="fst-italic">
+                  **still editing 
+                  We estimated the race of each defendant with a valid human name using a Bayesian prediction model.
+
+                  Bayes’ rule to examine the racial likelihood of frequently occurring surnames within Census name data and the racial composition for each neighborhood (tract data) where the evicted defendant lived. Using these two pieces of information, we computed the predicted probability of each racial category (White, Black, Latine, Asian, or other) for any given individual.
+                </p>
+                <ul>
+                  <li><i class="bi bi-check2-all"></i> <span>Predicted number of evictions for each racial group</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Proportion of evictions filed against each racial group</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Number of evictions for each racial group</span></li>
+                  <li><i class="bi bi-check2-all"></i> <span>Eviction rates by race, or the share of renters in each racial group</span></li>
+                </ul>
+              </div>
+              <div class="col-lg-6 order-1 order-lg-2 text-center">
+                <img src="assets/img/features-4.jpg" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div><!-- End tab content item -->
+
+          <div class="tab-pane fade" id="features-tab-5" role="tabpanel">
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0 d-flex flex-column justify-content-center">
                 <h3>Deduplication</h3>
