started on wa file

--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <!-- <h1 class="sitename"> Eviction Research Network</h1> <span>.</span> -->
-        <h1><img src="images/ern_logo/1Av2/EvictionStudy_logo_v09_1A_LOGO_BANNER.png" alt="The Eviction Research Network logo;"></h1>
+        <h1><img src="images/ern_logo/1Av2/EvictionStudy_logo_v09_1A_LOGO_BANNER.png" alt="The Eviction Research Network logo;"></h1> 
+        <!-- <h1 class="sitename">Eviction Research Network</h1> <span>.</span> -->
         <!-- style="width: 200px; background-color:rgba(255, 255, 255, 0.8); border-radius: 10px -->
       </a>
 
@@ -507,11 +505,11 @@
                   description here on geocoding and geographic redistribution
                 </p> -->
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>Legal Services Corporation</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Portland State University</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Chicago Legal Aid / ACLU</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Baltimore City Sheriff's Department</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Washington State unlawful detainer data</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Legal Services Corporation</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Portland State University</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Chicago Legal Aid / ACLU</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Baltimore City Sheriff's Department</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Washington State unlawful detainer data</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -528,8 +526,8 @@
                   Geocoding is the process of creating spatial data by establishing the latitude and longitude of individual addresses. 
                 </p>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>The quality and specificity of the address field provided in the original data varied</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>For each county within a state, we determined the geographic scale (census tract, zip code, or county) at which the plurality of eviction cases were available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>The quality and specificity of the address field provided in the original data varied</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>For each county within a state, we determined the geographic scale (census tract, zip code, or county) at which the plurality of eviction cases were available</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -546,7 +544,7 @@
                   String manipulation methods were used to clean and extract the first and last names of individual defendants
                 </p>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span> For these state profiles, we are only interested in analyzing evictions of individual households, not commercial evictions.</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span> For these state profiles, we are only interested in analyzing evictions of individual households, not commercial evictions.</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -566,10 +564,10 @@
                   </ul>
                   <ul>
                     <lil></span>This information was ued to:</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Predict number of evictions for each racial group</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Proportion of evictions filed against each racial group</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Number of evictions for each racial group</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Eviction rates by race, or the share of renters in each racial group</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Predict number of evictions for each racial group</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Proportion of evictions filed against each racial group</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Number of evictions for each racial group</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Eviction rates by race, or the share of renters in each racial group</span></li>
                   </ul>
                 </p>
                 
@@ -588,8 +586,8 @@
                   There were some instances of rows in a dataset having identical name and address but different date, state, and case ID. Presumably, these cases do not represent multiple separate evictions, but a single case being entered into the court's system at different points in time.
                 </p>
                 <ul>
-                  <li><i class="bi bi-check2-all"></i> <span>Tract-level data was deduplicated when valid defendant names and addresses were available, keeping the earliest row for each unique name and address</span></li>
-                  <li><i class="bi bi-check2-all"></i> <span>Deduplication was generally not be done for county-level data because the datasets did not contain enough information</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Tract-level data was deduplicated when valid defendant names and addresses were available, keeping the earliest row for each unique name and address</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <span>Deduplication was generally not be done for county-level data because the datasets did not contain enough information</span></li>
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
