--- a/wa.html
+++ b/wa.html
@@ -103,8 +103,22 @@
    <section id="alt-services" class="alt-services section">
     <div class="container section-title">
       <h2>Overview</h2>
-      <p> 
-        Current homelessness is related to the rapid population growth in the major metropolitan areas with housing construction not being able to keep pace with demand. For instance, between 2010 and 2017, the population in King county rose from 1.931 to 2.189 million,4 a growth of 13.3%. At the same time the number of housing units rose by 7.9%, from 835,600 to 902,100.5 As result, Washington State has lost over 90,554 affordable rentals6 since 2000, where 85% (76,865) of those homes disappeared between 2012 and 2017.7 These affordable units were lost to either increased rent or demolition. As a result of growing inequality,8 the current housing crisis is more concentrated toward the low wage population.
+      <p>Washington Evictions Are:</p>
+      <div class="col-lg-3 flex-column">
+        <p>Pervasive
+          Between 2013 and 2017, 1 in 55 Washingtonian adults had an eviction (130,203 adults which equals 1.8% of the State’s adult population)
+          Between 2004 and 2017, 397,697 adults have received a formal eviction.</p>
+      </div>
+      <div class="col-lg-5">
+        <p>A Civil Rights Issue
+          Black adults are over-represented in the eviction process when their group’s population consists of at least 5% of the county’s total population.
+          In Pierce County, 1 in 6 black adults has had an eviction between 2013 and 2017. In King County, 1 in 11 black adults has had an eviction in King County over the same time period. For white adults, 1 in 50 in Pierce County and 1 in 100 in King were evicted.
+          Women are evicted more than men across the state.</p>
+      </div>
+      <div class="col-lg-5">
+
+      </div>
+      
     </div>
     <!-- /Overview -->
     <!-- Historical Average Plot -->
