finished wa tasks

--- a/wa.html
+++ b/wa.html
@@ -167,7 +167,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Stats</h2>
+        <h2>Eviction Statistics</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -176,40 +176,44 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-arrow-up-short color-blue flex-shrink-0"></i>
+              <i class="bi bi-people color-blue flex-shrink-0"></i>
               <div>
-                <p>1 in</p><span data-purecounter-start="0" data-purecounter-end="55" data-purecounter-duration="1" class="purecounter"></span>
-                <p>adults were evicted between 2013 and 2017</p>
+                <h3>1 in 55</h3>
+                <!-- <span data-purecounter-start="0" data-purecounter-end="55" data-purecounter-duration="1" class="purecounter"></span> -->
+                <p>adults evicted 2013-2017</p>
               </div>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-chevron-down color-orange flex-shrink-0"></i>
+              <i class="bi bi-house color-orange flex-shrink-0"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="90554" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Affordable rentals lost since 2000</p>
+                <h3>Lost over 70,000</h3>
+                <!-- <span data-purecounter-start="0" data-purecounter-end="70000" data-purecounter-duration="1" class="purecounter"></span> -->
+                <p>affordable homes since 2012</p>
               </div>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-headset color-green flex-shrink-0"></i>
+              <i class="bi bi-arrow-up-short color-green flex-shrink-0"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Hours Of Support</p>
+                <!-- <span data-purecounter-start="0" data-purecounter-end="46" data-purecounter-duration="1" class="purecounter"></span> -->
+                <h3>46%</h3>
+                <p>of WA renters are rent burdened</p>
               </div>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-people color-pink flex-shrink-0"></i>
+              <i class="bi bi-person color-pink flex-shrink-0"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Hard Workers</p>
+                <h3>1 in 6</h3>
+                <!-- <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span> -->
+                <p>black adults evicted in Pierce County</p>
               </div>
             </div>
           </div><!-- End Stats Item -->
