started on oregon page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <ul>
               <li class="dropdown"><a href="#"><span>State Eviction Maps & Profiles</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Oregon</a></li>
+                  <li><a href="or.html">Oregon</a></li>
                   <li><a href="#">Indiana</a></li>
                   <li><a href="#">Minnesota</a></li>
                   <li><a href="#">Delaware</a></li>
